# nk-russia-tnr-tracker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.lite  Readme.md  docker-compose.yml  pyproject.toml  requirements-lite.txt  requirements.txt  schema.sql  schema_datagovernment.sql  schema_footprints.sql
.github/workflows/: event-triggered-pr.yml  nightly-etl.yml  pages-deploy.yml
docs/css/: styles.css
docs/js/: app.js
output/: footprints_sample_export.json  footprints_sample_report.md
